--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
     <div class="container" id="search-map" style="padding: 4rem 1.5rem;">
         <!-- Leaflet Map Container -->
         <div class="glass-panel" style="padding: 0; overflow: hidden; height: 500px; position: relative;">
-            <div id="map" style="width: 100%; height: 100%; border-radius: var(--radius-md);"></div>
+            <div id="map"
+                style="width: 100%; height: 100%; min-height: 500px; border-radius: var(--radius-md); background: #1a1a1a;">
+            </div>
 
             <div
                 style="position: absolute; bottom: 20px; left: 20px; z-index: 1000; background: rgba(15, 23, 42, 0.9); padding: 0.5rem 1rem; border-radius: 8px; backdrop-filter: blur(4px); border: 1px solid var(--border); box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
@@ -104,7 +106,7 @@
         </div>
     </div>
 
-    <!-- About Section -->
+    <!-- About Section -- there are several inline css but it fine to develop in simple way-->
     <section id="about" style="padding: 6rem 1.5rem; background: var(--bg-panel);">
         <div class="container" style="display: flex; align-items: center; gap: 4rem; flex-wrap: wrap;">
             <div style="flex: 1; min-width: 300px;">
