--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 Future of Parking
             </h1>
             <p style="font-size: 1.25rem; color: var(--text-muted); max-width: 600px; margin: 0 auto 3rem;">
-                Experience seamless, smart parking in Hetauda City. Book spots instantly with our AI-driven platform.
+                Experience seamless, smart parking in Hetauda City. Book spots instantly with our platform.
             </p>
 
             <div style="display: flex; gap: 1rem; justify-content: center; margin-bottom: 4rem;">
@@ -117,7 +117,7 @@
                     stress-free driving experience through technology.
                 </p>
                 <ul style="list-style: none; color: var(--text-muted);">
-                    <li style="margin-bottom: 0.5rem;">✓ AI-Powered Matching</li>
+                    <li style="margin-bottom: 0.5rem;">✓ Instant Matching</li>
                     <li style="margin-bottom: 0.5rem;">✓ Instant Digital Payments</li>
                     <li style="margin-bottom: 0.5rem;">✓ 24/7 Support</li>
                 </ul>
@@ -131,7 +131,7 @@
                     <img src="./assets/img/about_parking.jpg" alt="Smart Parking"
                         style="width: 100%; border-radius: var(--radius-sm); opacity: 0.8;"
                         onerror="this.style.display='none'">
-                    <div style="text-align: center; margin-top: 1rem; color: var(--text-muted);">Trusted by 10,000+
+                    <div style="text-align: center; margin-top: 1rem; color: var(--text-muted);">Trusted by Many
                         drivers</div>
                 </div>
             </div>
